--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <i class="fas fa-bars toggle"></i>
         <ul>
           <li><a class="active" href="#">Home</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">pricing</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#price">pricing</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="form">
           <i class="fa-solid fa-magnifying-glass"></i>
@@ -59,7 +59,7 @@
   </div>
   <!-- End Landing -->
   <!-- Start Services -->
-  <div class="services">
+  <div class="services" id="services">
     <div class="container">
       <div class="main-heading">
         <h2>Services</h2>
@@ -114,7 +114,7 @@
   </div>
   <!-- End Design -->
   <!-- Start Portfolio -->
-  <div class="portfolio">
+  <div class="portfolio" id="portfolio">
     <div class="container">
       <div class="main-heading">
         <h2>Portfolio</h2>
@@ -202,7 +202,7 @@
   </div>
   <!-- End Video Section -->
   <!-- Start About -->
-  <div class="about">
+  <div class="about" id="about">
     <div class="container">
       <div class="main-heading">
         <h2>About</h2>
@@ -304,7 +304,7 @@
   </div>
   <!-- End Quote -->
   <!-- Start Price -->
-  <div class="price">
+  <div class="price" id="price">
     <div class="container">
       <div class="main-heading">
         <h2>pricing</h2>
@@ -384,7 +384,7 @@
   </div>
   <!-- End Subscribe -->
   <!-- Start Contact -->
-    <div class="contact">
+    <div class="contact" id="contact">
       <div class="container">
         <div class="main-heading">
           <h2>Contact Us</h2>
